Consultation Booked. Doctor: Dr. Rahul Dutta | Patient Name: Subhadeep Ghorai | Time: 5 PM | Booking Date: 2024-11-14